# AoC_LeaderBot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aoc_bot/: __init__.py  aoc_api.py  change_detector.py  command_handlers.py  config.py  database.py  main.py  message_formatter.py  polling_manager.py  state_manager.py  telegram_notifier.py
data/: bot_config.db
