[project]
name = "aoc-telegram-bot"
version = "2.0.0"
description = "Multi-chat Telegram bot that monitors Advent of Code leaderboards"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==22.5",
    "requests==2.31.0",
    "aiohttp==3.9.1",
    "aiosqlite==0.19.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "black==23.12.1",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aoc_bot"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
